test/good/automatic/extension/mixed/without_input/ret_zero/0007.lat
class Y extends X { int a;}
class X {int b;}

void tester() {
	(new Y[3])[1] = new Y;
}
int main() {
	return 0;
}
