test/bad/automatic/extension/mixed/compile_time/0001.lat
class janusz {
  int barbara;
  int grzegorz;
}

class andrzej extends janusz {
  string barbara;
  int[] grzegorz;
}

int main() {
  return 1;
}
